--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:sqlserver://localhost:1433; DatabaseName=demo
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=sa
+spring.datasource.password=Lgoptimusg3
+logging.level.com.retotecnico=DEBUG
+swagger.enabled=true
+logging.level.org.hibernate.SQL=ERROR
+server.forward-headers-strategy=framework
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=America/Lima
